# web-scraper

./: .gitignore  main.py  posted.csv  poster.py  products.csv  pyproject.toml  requirements.txt  scraper.py
config/: akmatoff.test.checkpoint  akmatoff.test_uuid_and_cookie.json
